# codex-pro

./: AGENTS.md  CHANGELOG.md  README.md
.github/workflows/: ci.yml  cla.yml  codespell.yml  issue-deduplicator.yml  issue-labeler.yml  rust-ci.yml  rust-release.yml  sdk.yml
codex-cli/: package-lock.json
codex-rs/: .gitignore  AGENTS.md  CRUSH.md  Cargo.toml  README.md  planning-tool-orchestration-review.md
codex-rs/app-server-protocol/bindings/: GetAccountResponse.ts
codex-rs/app-server-protocol/src/: protocol.rs
codex-rs/app-server/src/: codex_message_processor.rs  (+2 more)
codex-rs/backend-client/: Cargo.toml
codex-rs/cli/: Cargo.toml
codex-rs/codex-agentic-core/: Cargo.toml
codex-rs/codex-agentic-core/src/: agents.rs  lib.rs  prompt.rs  settings.rs
codex-rs/codex-agentic-core/src/acp/: http.rs  mod.rs  status.rs  stdio.rs
codex-rs/codex-agentic-core/src/commands/: mod.rs
codex-rs/codex-agentic-core/src/index/: analytics.rs  builder.rs  chunk.rs  commands.rs  embedder.rs  events.rs  files.rs  mod.rs  paths.rs  query.rs
codex-rs/codex-agentic-core/src/provider/: mod.rs
codex-rs/codex-agentic-core/src/updates/: mod.rs
codex-rs/core/: Cargo.toml
codex-rs/exec/: Cargo.toml
codex-rs/mcp-server/: Cargo.toml
codex-rs/mcp-types/: generate_mcp_types.py
codex-rs/protocol/: Cargo.toml
codex-rs/scripts/: zai_probe.sh
codex-rs/tui/: Cargo.toml
docs/: config.md  contributing.md  example-config.md  getting-started.md  slash_commands.md
notes/: phase4-commit-status.md  phase5-commit-status.md  phase6-commit-status.md
sdk/typescript/: package.json
(+147 files in other folders)
